--- a/impressum.html
+++ b/impressum.html
@@ -1,4 +1,4 @@
-<h1 class="header center grey lighten-3">Impressum</h1>
+<h1 class="header center">Impressum</h1>
 
 <div class="container">
 	</br>
@@ -42,7 +42,7 @@
 		Mehr dazu in den folgenden 55780 Zeichen.
 	</p>
 	</br>
-	<h1 class="header center grey lighten-3">Disclaimer / Haftungsausschluss</h1>
+	<h1 class="header center">Disclaimer / Haftungsausschluss</h1>
 
 	<p class="flow-text">Palatina Films ist eine lose, freie, nicht kommerzielle Gruppierung rund um:<br>
 		Sebastian Sattler<br>
