--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
       }
 
       function darkTheme() {
+        $('body').addClass('dark')
         $('.main-menu-item').css('color', 'white')
         $('.collapsible-header, .side-menu').css('background-color', '#444444')
         $('.collapsible-body').css('background-color', '#555555')
