--- a/team.html
+++ b/team.html
@@ -248,7 +248,7 @@
     </div>
   </div>
 
-  <p class="flow-text">Schauspieler</p>
+  <p class="flow-text">Schauspielerin</p>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Carina.jpg" />
@@ -262,7 +262,7 @@
       <span class="card-title grey-text text-darken-4"
         ><b>Carina</b><i class="material-icons right">close</i></span
       >
-      <p>Schauspieler</p>
+      <p>Schauspielerin</p>
       <p>Maske</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -352,7 +352,7 @@
       <span class="card-title grey-text text-darken-4"
         ><b>Manuela</b><i class="material-icons right">close</i></span
       >
-      <p>Schauspieler</p>
+      <p>Schauspielerin</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
@@ -369,7 +369,7 @@
       <span class="card-title grey-text text-darken-4"
         ><b>Marleen</b><i class="material-icons right">close</i></span
       >
-      <p>Schauspieler</p>
+      <p>Schauspielerin</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
@@ -473,7 +473,7 @@
       <span class="card-title grey-text text-darken-4"
         ><b>Toni</b><i class="material-icons right">close</i></span
       >
-      <p>Schauspieler</p>
+      <p>Schauspielerin</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
