Changed content fixed CSS

--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -74,7 +74,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -113,7 +113,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -131,7 +131,7 @@
           Der Gründer und Regisseur von Palatina Films. Sebastian sorgt immer
           dafür, dass die Dreharbeiten strukturiert und zeitig ablaufen. Bei der
           Produktion gibt er vom Schreiben des Drehbuchs bis zum Schnitt der
-          Endfassung immer 100 %. Als Schöpfer der Selantis Reihe haucht er den
+          Endfassung immer 100%. Als Schöpfer der Selantis Reihe haucht er den
           Charakteren Leben ein und bringt dies auch erfolgreich vor die Kamera.
         </p>
       </div>
@@ -152,7 +152,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -161,7 +161,7 @@
 <div class="row">
   <p class="flow-text">Leitungsteam</p>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Anton.jpg" />
     </div>
     <div class="card-content">
@@ -182,7 +182,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Logge.jpg" />
     </div>
     <div class="card-content">
@@ -204,7 +204,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Julian.jpg" />
     </div>
     <div class="card-content">
@@ -226,7 +226,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Sebastian.jpg" />
     </div>
     <div class="card-content">
@@ -248,9 +248,9 @@
     </div>
   </div>
 
-  <p class="flow-text">Schauspielerin</p>
+  <p class="flow-text">Crew</p>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Carina.jpg" />
     </div>
     <div class="card-content">
@@ -268,7 +268,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Christian.jpg" />
     </div>
     <div class="card-content">
@@ -283,11 +283,12 @@
       <p>Drohne</p>
       <p>Organisation</p>
       <p>Technik</p>
+      <p>Kamera</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Frankie.jpg" />
     </div>
     <div class="card-content">
@@ -305,7 +306,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Leon.jpg" />
     </div>
     <div class="card-content">
@@ -322,7 +323,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Leonhard.jpg" />
     </div>
     <div class="card-content">
@@ -335,12 +336,12 @@
         ><b>Leonhard</b><i class="material-icons right">close</i></span
       >
       <p>Schauspieler</p>
-      <p>Post-Production</p>
+      <p>Co-Author</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Manuela.jpg" />
     </div>
     <div class="card-content">
@@ -357,7 +358,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Marleen.jpg" />
     </div>
     <div class="card-content">
@@ -374,7 +375,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Noah.jpg" />
     </div>
     <div class="card-content">
@@ -392,7 +393,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Pascal.jpg" />
     </div>
     <div class="card-content">
@@ -409,7 +410,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Patrick.jpg" />
     </div>
     <div class="card-content">
@@ -427,7 +428,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Paul.jpg" />
     </div>
     <div class="card-content">
@@ -444,7 +445,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Till.jpg" />
     </div>
     <div class="card-content">
@@ -461,7 +462,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves -effect waves -block waves -light">
+    <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Toni.jpg" />
     </div>
     <div class="card-content">
