--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <h1 class="header center">Unser Team</h1>
-<div id="profil_anton" class="modal team-modal">
+<div id="profil_anton" class="modal team-modal modal-fixed-footer">
   <div class="modal-content">
     <h4>Anton</h4>
     <div class="row">
@@ -35,12 +35,12 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
       >Schließen
     </a>
   </div>
 </div>
-<div id="profil_logge" class="modal team-modal">
+<div id="profil_logge" class="modal team-modal modal-fixed-footer">
   <div class="modal-content">
     <h4>Logge</h4>
     <div class="row">
@@ -74,12 +74,12 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
       >Schließen
     </a>
   </div>
 </div>
-<div id="profil_julian" class="modal team-modal">
+<div id="profil_julian" class="modal team-modal modal-fixed-footer">
   <div class="modal-content">
     <h4>Julian</h4>
     <div class="row">
@@ -113,12 +113,12 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
       >Schließen
     </a>
   </div>
 </div>
-<div id="profil_sebastian" class="modal team-modal">
+<div id="profil_sebastian" class="modal team-modal modal-fixed-footer">
   <div class="modal-content">
     <h4>Sebastian</h4>
     <div class="row">
@@ -152,7 +152,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves -green btn-flat"
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
       >Schließen
     </a>
   </div>
