--- a/team.html
+++ b/team.html
@@ -336,7 +336,7 @@
         ><b>Leonhard</b><i class="material-icons right">close</i></span
       >
       <p>Schauspieler</p>
-      <p>Co-Author</p>
+      <p>Co-Autor</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
