--- a/team.html
+++ b/team.html
@@ -35,8 +35,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-      >Schließen
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen
     </a>
   </div>
 </div>
@@ -44,7 +43,9 @@
   <div class="modal-content">
     <h4>Logge</h4>
     <div class="row">
-      <div class="col s12"><p>VFX, Homepage, Schauspieler</p></div>
+      <div class="col s12">
+        <p>VFX, Homepage, Schauspieler</p>
+      </div>
       <div class="col s12 m6 l4 xl5">
         <img class="responsive-img" src="Bilder/Team/Full/Logge.jpg" />
       </div>
@@ -74,8 +75,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-      >Schließen
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen
     </a>
   </div>
 </div>
@@ -83,7 +83,9 @@
   <div class="modal-content">
     <h4>Julian</h4>
     <div class="row">
-      <div class="col s12"><p>Requisitenbau, Catering, Homepage</p></div>
+      <div class="col s12">
+        <p>Requisitenbau, Catering, Homepage</p>
+      </div>
       <div class="col s12 m6 l4 xl5">
         <img class="responsive-img" src="Bilder/Team/Full/Julian.jpg" />
       </div>
@@ -113,8 +115,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-      >Schließen
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen
     </a>
   </div>
 </div>
@@ -122,17 +123,18 @@
   <div class="modal-content">
     <h4>Sebastian</h4>
     <div class="row">
-      <div class="col s12"><p>Produktion, Regie, Autor</p></div>
+      <div class="col s12">
+        <p>Produktion, Regie, Autor</p>
+      </div>
       <div class="col s12 m6 l4 xl5">
         <img class="responsive-img" src="Bilder/Team/Full/Sebastian.jpg" />
       </div>
       <div class="col s12 m6 l8 xl7">
         <p class="flow-text">
-          Der Gründer und Regisseur von Palatina Films. Sebastian sorgt immer
-          dafür, dass die Dreharbeiten strukturiert und zeitig ablaufen. Bei der
-          Produktion gibt er vom Schreiben des Drehbuchs bis zum Schnitt der
-          Endfassung immer 100%. Als Schöpfer der Selantis Reihe haucht er den
-          Charakteren Leben ein und bringt dies auch erfolgreich vor die Kamera.
+          Der Gründer und Regisseur von Palatina Films. Sebastian ist der Hauptverantwortliche, damit die Dreharbeiten
+          strukturiert und zeitig ablaufen. In der Produktion gibt er vom Schreiben des Drehbuchs bis zum Schnitt der
+          Endfassung immer 100%. Als Schöpfer der Selantis Reihe haucht er den Charakteren Leben ein und bringt dies
+          auch selbst erfolgreich vor die Kamera.
         </p>
       </div>
       <div class="col s12 m12 l8 xl7">
@@ -152,8 +154,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-      >Schließen
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen
     </a>
   </div>
 </div>
@@ -165,15 +166,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Anton.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Anton</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Anton</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b><a class="modal-trigger" href="#profil_anton">Anton</a></b
-        ><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_anton">Anton</a></b><i
+          class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Schauspieler</p>
       <p>Post-Production</p>
@@ -186,15 +183,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Logge.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Logge</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Logge</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b><a class="modal-trigger" href="#profil_logge">Logge</a></b
-        ><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_logge">Logge</a></b><i
+          class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Post-Production</p>
       <p>VFX</p>
@@ -208,15 +201,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Julian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Julian</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Julian</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b><a class="modal-trigger" href="#profil_julian">Julian</a></b
-        ><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_julian">Julian</a></b><i
+          class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Catering</p>
       <p>Ton</p>
@@ -230,15 +219,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Sebastian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Sebastian</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b><a class="modal-trigger" href="#profil_sebastian">Sebastian</a></b
-        ><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_sebastian">Sebastian</a></b><i
+          class="material-icons right">close</i></span>
       <p>Produzent</p>
       <p>Regie</p>
       <p>Post-Production</p>
@@ -254,14 +239,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Carina.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Carina</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Carina</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Carina</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Carina</b><i class="material-icons right">close</i></span>
       <p>Schauspielerin</p>
       <p>Maske</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
@@ -272,14 +253,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Christian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Christian</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Christian</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Christian</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Christian</b><i class="material-icons right">close</i></span>
       <p>Drohne</p>
       <p>Organisation</p>
       <p>Technik</p>
@@ -292,14 +269,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Frankie.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Frankie</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Frankie</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Organisation</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
@@ -310,14 +283,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Leon.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Leon</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Leon</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Leon</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Leon</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -327,14 +296,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Leonhard.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Leonhard</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Leonhard</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Co-Autor</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
@@ -345,14 +310,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Manuela.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Manuela</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Manuela</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">close</i></span>
       <p>Schauspielerin</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -362,14 +323,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Marleen.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Marleen</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Marleen</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">close</i></span>
       <p>Schauspielerin</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -379,14 +336,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Noah.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Noah</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Noah</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Noah</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Noah</b><i class="material-icons right">close</i></span>
       <p>Technik</p>
       <p>Licht</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
@@ -397,14 +350,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Pascal.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Pascal</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Pascal</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -414,14 +363,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Patrick.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Patrick</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Patrick</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Organisation</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
@@ -432,14 +377,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Paul.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Paul</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Paul</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Paul</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Paul</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -449,14 +390,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Till.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Till</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Till</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Till</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Till</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
@@ -466,14 +403,10 @@
       <img class="activator" src="./Bilder/Team/Thumb/Toni.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Toni</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Toni</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Toni</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Toni</b><i class="material-icons right">close</i></span>
       <p>Schauspielerin</p>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
